--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/rhdb?createDatabaseIfNotExist=true
 spring.datasource.username=postgres
 spring.datasource.password=4610
+server.port=${PORT:3000}
 
 # jpa
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
