--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # datasource
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/rhdb?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:postgresql://localhost/sistemarhdb?createDatabaseIfNotExist=true
 spring.datasource.username=postgres
 spring.datasource.password=4610
 server.port=${PORT:8080}
