--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,5 +18,6 @@ jwt.expiration=604800000
 email.username=sistema_lc@outlook.com
 email.password=461010wei
 
-reset.url=http://localhost:4200/login-alterar/
+reset.url=https://sistema-rh-bay.vercel.app/login-alterar/
+
 mensagem.email=Olá,\n\nClique no link a seguir para redefinir sua senha: 
