--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.datasource.username=postgres
 spring.datasource.password=4610
 server.port=${PORT:8080}
 
+# Configuração de fuso horário
+spring.datasource.hikari.data-source-properties.hibernate.jdbc.time_zone=UTC
+
 # jpa
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
