--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # datasource
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/sistemarhdb?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:postgresql://localhost/sistemarhdb?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo
 spring.datasource.username=postgres
 spring.datasource.password=4610
 server.port=${PORT:8080}
@@ -14,6 +14,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=false
 spring.jackson.time-zone=America/Sao_Paulo
+spring.jackson.locale=pt_BR
 
 # jwt
 jwt.secret=StringUsadaParaGerarToken
